Add common tags extraction logic into projection stages (#250)
### Description
Binary projection stages (`subtract`, `divide`, `as_percent`) now support operations between time series that don't have exact label matches by automatically extracting common tags and grouping series accordingly.

### Changes
- **Common Tag Extraction**: When labels cannot be exactly matched between left and right series, the stages now identify common label names across all input series.
- **Automatic Bucketing**: Series are automatically grouped into buckets based on their common tag values.
- **Projection Operations**: Binary operations (subtraction, division, percentage calculation) are performed within each bucket, enabling operations between series that share only a subset of labels.

### Implementation Details
- Added `shouldExtractCommonTagKeys()` method to `AbstractBinaryProjectionStage` (defaults to `false`)
- `SubtractStage`, `DivideStage`, and `AsPercentStage` override this method to return `true`, enabling common tag extraction
- Uses `Labels.findCommonLabelNames()` to identify shared label names across series
- Right series are grouped and merged by common tags before matching with left series


* Add common tags extraction logic into projection stages

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* nit

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* Add unit test

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* add unit test

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* fix test

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* rebase

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* nit

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* nit

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* add unit tests

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

---------

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>